# Pyassit_poetry

./: .gitignore  Dockerfile  README.md  pyproject.toml  req_Dockerfile  requirements.txt
pyassit_poetry/: abstract_pyassist.py  cli_pyassist.py
pyassit_poetry/utility/: abstract_addressbook_interaction.py  abstract_notes_interaction.py  address.py  addressbook.py  birthday.py  city.py  cli_addressbook_interaction.py  cli_notes_interaction.py  content.py  country.py  email.py  exit_interrupt.py  field.py  invalid_csv_file_structure.py  name.py  note.py  notes.py  phone.py  record.py  sorter.py  street.py  title.py  zip_code.py
