[tool.poetry]
name = "pyassit-poetry"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cowsay = "^6.1"
pyfiglet = "~1.0.0"
prompt-toolkit = "~3.0.0"
validator-collection = "^1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
